# Industrial-projects

./: README.md
Akinator/: Akinator.cpp  Akinator.h  AkinatorManager.cpp  AkinatorManager.h  CMakeLists.txt  Config.h  Tree.cpp  Tree.h  input_standard  main.cpp  vis  visualization
Akinator/data/: data  new  (+2 more)
Dumps/: CMakeLists.txt  Dump.cpp  Stack.h  dump  main.cpp  undef_adder.py
Dumps/tests/: testing.cpp
MathParser/: CMakeLists.txt  main.cpp  pic  visual
SortingStringsInOrder/: CMakeLists.txt  Defenitions.cpp  Header.h  a.out  input  main.cpp  output
SortingStringsInOrder/docs/: Doxyfile
SortingStringsInOrder/docs/html/: _header_8h.html  _header_8h__incl.md5  _header_8h_source.html  annotated.html  classes.html  dir_167e3c12547b3c17ba2a778313aa5f87.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_e6c41fb611ac513ae4048f59273529ec.html  dir_ef702146738be33f82ccd06870f482b0.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  struct_opened_string-members.html  struct_opened_string.html
SortingStringsInOrder/docs/html/search/: all_2.js  all_3.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js
SortingStringsInOrder/docs/latex/: _header_8h.tex  _header_8h__incl.md5  annotated.tex  files.tex  refman.tex  struct_opened_string.tex
SortingStringsInOrder/tests/: testing.cpp
StackMachine/: Assembly.cpp  Assembly.h  CMakeLists.txt  Codegeneration.h  CommandClass.h  CommandsDescription.h  Execute.cpp  Execute.h  Global.h  Stack.h  dump  main.cpp  readme.md  undef_adder.py
(+12 files in other folders)
